--- a/oss-backend/pom.xml
+++ b/oss-backend/pom.xml
@@ -1,9 +1,38 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
+
+  <parent>
+    <groupId>org.springframework.boot</groupId>
+    <artifactId>spring-boot-starter-parent</artifactId>
+    <version>3.3.3</version>
+    <relativePath/> <!-- lookup parent from repository -->
+  </parent>
+
   <groupId>org.native_developers</groupId>
   <artifactId>oss-backend</artifactId>
   <version>1.0-SNAPSHOT</version>
+  <packaging>pom</packaging>
   <name>Archetype - oss-backend</name>
   <url>http://maven.apache.org</url>
+  <modules>
+    <module>order</module>
+    <module>product</module>
+    <module>inventory</module>
+    <module>cart</module>
+    <module>delivery</module>
+    <module>payment</module>
+    <module>product_category</module>
+    <module>auth</module>
+    <module>user</module>
+  </modules>
+
+  <build>
+    <plugins>
+      <plugin>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-maven-plugin</artifactId>
+      </plugin>
+    </plugins>
+  </build>
 </project>
