--- a/oss-backend/order/pom.xml
+++ b/oss-backend/order/pom.xml
@@ -45,5 +45,9 @@
             <artifactId>modelmapper</artifactId>
             <version>3.2.1</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
+        </dependency>
     </dependencies>
 </project>
