Setup API Gateway

--- a/oss-backend/pom.xml
+++ b/oss-backend/pom.xml
@@ -26,6 +26,7 @@
     <module>auth</module>
     <module>user</module>
     <module>discoveryserver</module>
+      <module>apigateway</module>
   </modules>
 
   <properties>
