--- a/oss-backend/apigateway/src/main/resources/application.properties
+++ b/oss-backend/apigateway/src/main/resources/application.properties
@@ -1,18 +1,33 @@
 spring.application.name=apigateway
 server.port=8080
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka
+springdoc.api-docs.enabled=true
+springdoc.swagger-ui.enabled=true
+springdoc.swagger-ui.path=/swagger-ui.html
+springdoc.swagger-ui.config-url=/v3/api-docs/swagger-config
+
+springdoc.swagger-ui.urls[0].name=API Gateway Service
+springdoc.swagger-ui.urls[0].url=/v3/api-docs
+springdoc.swagger-ui.urls[1].name=Auth Service
+springdoc.swagger-ui.urls[1].url=/auth-service/v3/api-docs
+springdoc.swagger-ui.urls[2].name=Cart Service
+springdoc.swagger-ui.urls[2].url=/cart-service/v3/api-docs
+springdoc.swagger-ui.urls[3].name=Category Service
+springdoc.swagger-ui.urls[3].url=/category-service/v3/api-docs
+springdoc.swagger-ui.urls[4].name=Delivery Service
+springdoc.swagger-ui.urls[4].url=/delivery-service/v3/api-docs
+springdoc.swagger-ui.urls[5].name=Inventory Service
+springdoc.swagger-ui.urls[5].url=/inventory-service/v3/api-docs
+springdoc.swagger-ui.urls[6].name=Order Service
+springdoc.swagger-ui.urls[6].url=/order-service/v3/api-docs
+springdoc.swagger-ui.urls[7].name=Payment Service
+springdoc.swagger-ui.urls[7].url=/payment-service/v3/api-docs
+springdoc.swagger-ui.urls[8].name=Product Service
+springdoc.swagger-ui.urls[8].url=/product-service/v3/api-docs
+springdoc.swagger-ui.urls[9].name=User Service
+springdoc.swagger-ui.urls[9].url=/user-service/v3/api-docs
 
 # api gateway login config
 logging.level.root = INFO
 logging.level.org.springframework.cloud.gateway.route.RouteDefinitionLocator = INFO
 logging.level.org.springframework.cloud.gateway = TRACE
-
-## Inventory service routes
-spring.cloud.gateway.routes[0].id=inventory
-spring.cloud.gateway.routes[0].uri=http://inventory
-spring.cloud.gateway.routes[0].predicates[0]=Path=/api/v1/item/**
-
-## Product service routes
-spring.cloud.gateway.routes[1].id=product
-spring.cloud.gateway.routes[1].uri=http://product
-spring.cloud.gateway.routes[1].predicates[0]=Path=/api/v1/product/**
