--- a/oss-backend/payment/src/main/resources/application.properties
+++ b/oss-backend/payment/src/main/resources/application.properties
@@ -1,11 +1,19 @@
-spring.application.name=payment
-spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://localhost:3308/oss-payment?createDatabaseIfNotExist=true
-spring.datasource.username=root
-spring.datasource.password=root
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.jpa.show-sql=true
+spring.application.name=payment-service
 server.port=0
+
+spring.jpa.hibernate.ddl-auto=update
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+spring.datasource.url=jdbc:mysql://localhost:3306/oss_payment?createDatabaseIfNotExist=true
+spring.datasource.username=root
+spring.datasource.password=Mylearn123@
+
+spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
+spring.jpa.show-sql=true
+spring.jpa.generate-ddl=true
+spring.jpa.properties.hibernate.format_sql=true
+
+
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka
 
 springdoc.swagger-ui.path=/payment-service/swagger-ui.html
