--- a/oss-backend/payment/pom.xml
+++ b/oss-backend/payment/pom.xml
@@ -54,5 +54,11 @@
             <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
             <version>2.6.0</version>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/com.stripe/stripe-java -->
+        <dependency>
+            <groupId>com.stripe</groupId>
+            <artifactId>stripe-java</artifactId>
+            <version>27.1.2</version>
+        </dependency>
     </dependencies>
 </project>
