--- a/oss-backend/order/src/main/resources/application.properties
+++ b/oss-backend/order/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 spring.application.name=order
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://localhost:3308/oss-order?createDatabaseIfNotExist=true
+spring.datasource.url=jdbc:mysql://localhost:3306/oss-order?createDatabaseIfNotExist=true
 spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.password=Jiya@0742257435
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.show-sql=true
 server.port=0
