Create endpoints in Auth module

--- a/oss-backend/auth/src/main/resources/application.properties
+++ b/oss-backend/auth/src/main/resources/application.properties
@@ -10,3 +10,14 @@ eureka.client.service-url.defaultZone=http://localhost:8761/eureka
 
 springdoc.swagger-ui.path=/auth-service/swagger-ui.html
 springdoc.api-docs.path=/auth-service/v3/api-docs
+
+# jwt secret
+jwt.secret=${JWT_SECRET_KEY}
+
+# SMTP mail
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=${EMAIL}
+spring.mail.password=${EMAIL_PASSWORD}
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
