--- a/oss-backend/inventory/src/main/resources/application.properties
+++ b/oss-backend/inventory/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 spring.application.name=inventory
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:mysql://localhost:3308/oss-inventory?createDatabaseIfNotExist=true
-spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.username=${DB_USER}
+spring.datasource.password=${DB_PASSWORD}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.show-sql=true
 server.port=0
