--- a/oss-frontend/tsconfig.json
+++ b/oss-frontend/tsconfig.json
@@ -5,3 +5,11 @@
     { "path": "./tsconfig.node.json" }
   ]
 }
+
+// {
+//   "compilerOptions": {
+//     "jsx": "react-jsx", // or "react" for older versions
+//     "module": "esnext", // or "commonjs" if your setup requires it
+//     ...
+//   }
+// }
