--- a/oss-backend/order/pom.xml
+++ b/oss-backend/order/pom.xml
@@ -13,6 +13,14 @@
     <dependencies>
         <dependency>
             <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-webflux</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-loadbalancer</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-jpa</artifactId>
         </dependency>
         <dependency>
@@ -53,6 +61,12 @@
             <groupId>org.springdoc</groupId>
             <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
             <version>2.6.0</version>
+        </dependency>
+        <!--    Product microservice    -->
+        <dependency>
+            <groupId>org.native_developers</groupId>
+            <artifactId>product</artifactId>
+            <version>${project.parent.version}</version>
         </dependency>
     </dependencies>
 </project>
