--- a/oss-backend/product/pom.xml
+++ b/oss-backend/product/pom.xml
@@ -63,5 +63,12 @@
             <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
             <version>2.6.0</version>
         </dependency>
+
+        <!--    inventory microservice    -->
+        <dependency>
+            <groupId>org.native_developers</groupId>
+            <artifactId>inventory</artifactId>
+            <version>${project.parent.version}</version>
+        </dependency>
     </dependencies>
 </project>
