--- a/oss-backend/apigateway/src/main/resources/application.properties
+++ b/oss-backend/apigateway/src/main/resources/application.properties
@@ -2,6 +2,7 @@ spring.application.name=apigateway
 server.port=8080
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka
 springdoc.api-docs.enabled=true
+spring.cloud.gateway.discovery.locator.enabled=true
 springdoc.swagger-ui.enabled=true
 springdoc.swagger-ui.path=/swagger-ui.html
 springdoc.swagger-ui.config-url=/v3/api-docs/swagger-config
