--- a/oss-backend/cart/pom.xml
+++ b/oss-backend/cart/pom.xml
@@ -54,5 +54,16 @@
             <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
             <version>2.6.0</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-webflux</artifactId>
+        </dependency>
+
+        <!--    Inventory microservice    -->
+        <dependency>
+            <groupId>org.native_developers</groupId>
+            <artifactId>inventory</artifactId>
+            <version>${project.parent.version}</version>
+        </dependency>
     </dependencies>
 </project>
