--- a/oss-backend/order/pom.xml
+++ b/oss-backend/order/pom.xml
@@ -62,10 +62,11 @@
             <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
             <version>2.6.0</version>
         </dependency>
-        <!--    Product microservice    -->
+
+        <!--    Cart microservice    -->
         <dependency>
             <groupId>org.native_developers</groupId>
-            <artifactId>product</artifactId>
+            <artifactId>cart</artifactId>
             <version>${project.parent.version}</version>
         </dependency>
     </dependencies>
