--- a/oss-frontend/package.json
+++ b/oss-frontend/package.json
@@ -15,12 +15,13 @@
     "@emotion/styled": "^11.13.5",
     "@mui/icons-material": "^6.1.9",
     "@mui/material": "^6.1.9",
-    "@mui/x-data-grid": "^7.22.2",
     "@mui/styles": "^6.1.9",
+    "@mui/x-data-grid": "^7.22.2",
     "axios": "^1.7.7",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.2",
+    "react-icons": "^5.4.0",
     "react-router-dom": "^6.28.0"
   },
   "devDependencies": {
