--- a/oss-backend/payment/src/main/resources/application.properties
+++ b/oss-backend/payment/src/main/resources/application.properties
@@ -4,8 +4,8 @@ server.port=0
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
-spring.datasource.url=jdbc:mysql://localhost:3306/oss_payment?createDatabaseIfNotExist=true
-spring.datasource.username=${DB_NAME}
+spring.datasource.url=jdbc:mysql://localhost:3308/oss_payment?createDatabaseIfNotExist=true
+spring.datasource.username=${DB_USER}
 spring.datasource.password=${DB_PASSWORD}
 
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
