--- a/oss-frontend/package.json
+++ b/oss-frontend/package.json
@@ -22,7 +22,7 @@
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.2",
     "react-icons": "^5.4.0",
-    "react-router-dom": "^6.28.0"
+    "react-router-dom": "^6.28.0",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
     "react-router-dom": "^7.0.2"
