--- a/oss-backend/auth/src/main/resources/application.properties
+++ b/oss-backend/auth/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=auth
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://localhost:3308/oss-auth?createDatabaseIfNotExist=true
+spring.datasource.url=jdbc:mysql://${DATABASE}:3307/oss-auth?createDatabaseIfNotExist=true
 spring.datasource.username=${DB_USER}
 spring.datasource.password=${DB_PASSWORD}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
