--- a/oss-backend/payment/src/main/resources/application.properties
+++ b/oss-backend/payment/src/main/resources/application.properties
@@ -1,18 +1,14 @@
 spring.application.name=payment-service
 server.port=0
-
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-
-spring.datasource.url=jdbc:mysql://localhost:3308/oss_payment?createDatabaseIfNotExist=true
+spring.datasource.url=jdbc:mysql://${DATABASE}:3307/oss_payment?createDatabaseIfNotExist=true
 spring.datasource.username=${DB_USER}
 spring.datasource.password=${DB_PASSWORD}
-
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.show-sql=true
 spring.jpa.generate-ddl=true
 spring.jpa.properties.hibernate.format_sql=true
-
 
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka
 
