--- a/oss-backend/docker-compose.yml
+++ b/oss-backend/docker-compose.yml
@@ -3,15 +3,19 @@ version: '3.8'
 services:
   mysql:
     image: mysql
-    container_name: oss-mysql
+    restart: always
+    container_name: mysql
     ports:
       - "3306:3306"
+    expose:
+      - "3306"
     environment:
-      MYSQL_USER: root
-      MYSQL_PASSWORD: root
+      MYSQL_DATABASE: 'db'
+      MYSQL_USER: 'user'
+      MYSQL_PASSWORD: 'password'
+      MYSQL_ROOT_PASSWORD: 'password'
     volumes:
       - ./data/mysql:/var/lib/mysql/data
-      - ./docker/mysql/init.sql:/docker-entrypoint-initdb.d/init.sql
 
   product-service:
     build:
