--- a/oss-frontend/package.json
+++ b/oss-frontend/package.json
@@ -16,6 +16,7 @@
     "@mui/icons-material": "^6.1.9",
     "@mui/material": "^6.1.9",
     "@mui/styles": "^6.1.9",
+    "@mui/x-charts": "^7.23.2",
     "@mui/x-data-grid": "^7.22.2",
     "axios": "^1.7.7",
     "react": "^18.3.1",
